# VESmail

./: Android.mk  ChangeLog  Makefile.am  Makefile.in  Makefile.win  NEWS  README  VESmail.h  aclocal.m4  config.h.in  configure  configure.ac  configure.bat
app/: README  jni.c
cli/: cli.c  cli.h  conf.c  conf.h  help.c  help.h  tty.h  tty_u.c  tty_w.c  vesmail.c  vesmail.h
etc/systemd/system/: vesmail.service
etc/vesmail/: vesmail-banner-html  vesmail-banner-txt  vesmail.conf
etc/vesmail/sni/mydomain.com/: vesmail.conf
etc/xinetd.d/: ves-imap  ves-imap-tls  ves-smtp  ves-smtp-tls
imap/: imap.c  imap.h  imap_append.c  imap_append.h  imap_fetch.c  imap_fetch.h  imap_msg.c  imap_msg.h  imap_proxy.c  imap_proxy.h  imap_result.c  imap_result.h  imap_result_proc.c  imap_sect.c  imap_sect.h  imap_start.c  imap_start.h  imap_token.c  imap_token.h  imap_track.c  imap_track.h  imap_xform.c  imap_xform.h  imap_xves.c  imap_xves.h
lib/: banner.c  banner.h  cte.c  cte.h  decrypt.c  decrypt.h  encrypt.c  encrypt.h  header.c  header.h  mail.c  mail.h  multi.c  multi.h  optns.c  optns.h  parse.c  parse.h  util.c  util.h  ves.c  ves.h  xform.c  xform.h
now/: now.c  now.h  now_e2e.c  now_e2e.h  now_feedback.c  now_feedback.h  now_manifest.c  now_manifest.h  now_oauth.c  now_oauth.h  now_options.c  now_options.h  now_post.c  now_post.h  now_probe.c  now_probe.h  now_store.c  now_store.h  now_websock.c  now_websock.h
smtp/: smtp.c  smtp.h  smtp_cmd.c  smtp_cmd.h  smtp_proxy.c  smtp_proxy.h  smtp_reply.c  smtp_reply.h  smtp_start.c  smtp_start.h  smtp_track.c  smtp_track.h  smtp_xves.c  smtp_xves.h
snif/: cert.c  snif.c  snif.h  tunl.c  tunl.h
srv/: arch.c  arch.h  arch_unix.c  arch_win.c  conf.c  conf.h  curlsh.c  curlsh.h  daemon.c  daemon.h  guard.c  guard.h  local.c  local.h  override.c  override.h  proc.c  proc.h  sasl.c  sasl.h  server.c  server.h  tls.c  tls.h  x509store.c  x509store.h
util/: jTree.c  jTree.h
